fix large name boxes overflowing issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -413,3 +413,28 @@ a:hover {
     display:block;
   }
 }
+
+
+/*Fix for large names front page*/
+.profilebox > .details > h3 {
+  height:63px;
+}
+
+@media (max-width:1440px) {
+  .profilebox > .details > h3 {
+    font-size:20px;
+  }
+}
+
+
+@media (max-width:961px) {
+  .profilebox > .details > h3 {
+    font-size:18px;
+  }
+}
+
+
+
+.profilebox_2 > .clearfix > .details > h3 {
+  
+}
